@@ -6,6 +6,7 @@ v6.8
 : Fixed the spacing of the "Popular" tab on the home page
 : Fixed a bug that caused some packages not to process savings calculations corectly
 : Fixed a bug where DLC checkboxes would behave incorrectly if the DLC had no subID
+: Updated DLC pages to work with the new store layout including the "add all unowned" button
 
 v6.7
 -----
